--- a/modules/testing_module/private/views/pages/test.liquid
+++ b/modules/testing_module/private/views/pages/test.liquid
@@ -4,8 +4,8 @@ response_headers: >
   "X-Frame-Options": null,
   "Content-Security-Policy": "frame-ancestors https://*.siteglide.com"
   }
-authorization_policies:
-  - modules/siteglide_system/module_is_in_admin
+{% comment %} authorization_policies:
+  - modules/siteglide_system/module_is_in_admin {% endcomment %}
 ---
 Test
 
