--- a/modules/testing_module/private/views/pages/test.liquid
+++ b/modules/testing_module/private/views/pages/test.liquid
@@ -5,6 +5,6 @@ response_headers: >
     "Content-Security-Policy": "frame-ancestors https://*.siteglide.com"
   }
 ---
-Test
+Test is module updating
 
 {%- include 'module_form', id: '3' -%}
