--- a/modules/testing_module/private/views/pages/test.liquid
+++ b/modules/testing_module/private/views/pages/test.liquid
@@ -6,5 +6,5 @@ response_headers: >
   }
 ---
 Test is module updating
-
+{% include "modules/siteglide_system/siteglide_head" %}
 {%- include 'module_form', id: '3' -%}
